@@ -1,0 +1,5 @@
+```plantuml
+@startuml
+Alice --> Bob
+@enduml
+```
